For what will it profit a man if he gains the whole world and forfeits his soul?